add auth_middleware
